[package]
name = "tavol"
version = "0.1.0"
authors = ["Sungbae Jeong <almagest0328@gmail.com>"]
description = "Simple AES-encryption/decryption for files"
repository = "https://github.com/e0328eric/tavol"
edition = "2021"
license = "MIT"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
strip = true

[dependencies]
aes = "0.8.2"
clap = { version = "4.2.7", features = ["derive"] }
error-stack = "0.3.1"
sha2 = "0.10.6"
thiserror = "1.0.40"
